--- a/index.html
+++ b/index.html
@@ -320,8 +320,7 @@
         const messageInput = document.getElementById('message');
         const imageInput = document.getElementById('imageInput');
         const sendButton = document.getElementById('sendButton');
-        const backendURL = 'http://localhost:3001';
-
+        const backendURL = 'https://chat-wanzofc.vercel.app';
         async function loadMessages() {
             const response = await fetch(`${backendURL}/messages`);
             const messages = await response.json();
@@ -376,12 +375,10 @@
                 },
                 body: JSON.stringify(newMessage)
             });
-
             messageInput.value = '';
             imageInput.value = '';
             loadMessages();
         }
-
         function toBase64(file) {
             return new Promise((resolve, reject) => {
                 const reader = new FileReader();
@@ -390,13 +387,9 @@
                 reader.onerror = error => reject(error);
             });
         }
-
         sendButton.addEventListener('click', sendMessage);
-
         loadMessages();
-
         setInterval(loadMessages, 5000);
     </script>
 </body>
-
 </html>
