--- a/index.html
+++ b/index.html
@@ -5,6 +5,8 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Anonymous Chat</title>
+    <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Roboto:wght@400;500;700&display=swap">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0/css/all.min.css" integrity="sha512-9usAa10IRO0HhonpyAIVpjrylPvoDwiPUiKdWk5t3PyolY1cOd4DSE0Ga+ri4AuTroPR5aQvXU9xC6qOPnzFeg==" crossorigin="anonymous" referrerpolicy="no-referrer" />
     <style>
         body {
             font-family: 'Roboto', sans-serif;
@@ -50,6 +52,7 @@
             box-shadow: 0 4px 20px rgba(0, 0, 0, 0.3);
             overflow-y: auto;
             max-height: 400px;
+            scroll-behavior: smooth;
         }
 
         .message {
@@ -140,7 +143,6 @@
         }
 
         .reply-button {
-            float: right;
             background-color: transparent;
             color: #86BBD8;
             border: none;
@@ -177,6 +179,39 @@
             border-radius: 8px;
             margin-top: 10px;
         }
+
+        .reply-box {
+            background-color: rgba(60, 75, 95, 0.5);
+            border-radius: 8px;
+            padding: 10px;
+            margin-top: 10px;
+            display: none;
+        }
+
+        .reply-box textarea {
+            width: 100%;
+            padding: 8px;
+            border: none;
+            border-radius: 5px;
+            background-color: rgba(45, 59, 78, 0.5);
+            color: #E0E2FF;
+            font-size: 0.9em;
+            outline: none;
+            margin-bottom: 5px;
+        }
+
+        .reply-box button {
+            padding: 8px 15px;
+            font-size: 0.9em;
+        }
+
+        .replied-to {
+            background-color: rgba(70, 85, 105, 0.6);
+            border-radius: 8px;
+            padding: 8px;
+            margin-bottom: 8px;
+            font-size: 0.9em;
+        }
     </style>
 </head>
 
@@ -197,6 +232,7 @@
         </div>
     </div>
 
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/gsap/3.9.1/gsap.min.js"></script>
     <script src="https://cdn.jsdelivr.net/particles.js/2.0.0/particles.min.js"></script>
     <script>
         particlesJS('particles-js', {
@@ -314,13 +350,13 @@
                     "export": false
                 }
             });
-
         const chatBox = document.getElementById('chatBox');
         const usernameInput = document.getElementById('username');
         const messageInput = document.getElementById('message');
         const imageInput = document.getElementById('imageInput');
         const sendButton = document.getElementById('sendButton');
         const backendURL = 'https://chat-wanzofc.vercel.app';
+
         async function loadMessages() {
             const response = await fetch(`${backendURL}/messages`);
             const messages = await response.json();
@@ -331,16 +367,81 @@
                 const messageDiv = document.createElement('div');
                 messageDiv.classList.add('message');
 
-                let messageContent = `<div class="username">${message.username}</div><h3>${message.text}</h3>`;
+                let messageContent = `
+                <div class="username">${message.username}</div>
+                <p>${message.text}</p>`;
 
                 if (message.image) {
                     messageContent += `<img src="${message.image}" alt="Image">`;
                 }
+                messageContent += `
+                    <small>${new Date(message.timestamp).toLocaleString()}</small>
+                    <button class="reply-button" data-message-id="${message.id}">
+                         <i class="fa-solid fa-reply"></i> Reply
+                    </button>
+                `;
 
-                messageContent += `<small>${new Date(message.timestamp).toLocaleString()}</small>`;
+                if (message.replyTo) {
+                  const repliedToMessage = messages.find(m => m.id === message.replyTo);
+                  if (repliedToMessage) {
+                      messageContent = `
+                      <div class="replied-to">
+                          Replying to: ${repliedToMessage.username}: ${repliedToMessage.text}
+                      </div>
+                      ` + messageContent;
+                  }
+                }
+
+                const replyBox = document.createElement('div');
+                replyBox.classList.add('reply-box');
+                replyBox.innerHTML = `
+                  <textarea placeholder="Type your reply..."></textarea>
+                  <button class="send-reply-button" data-message-id="${message.id}">Send Reply</button>
+                `;
                 messageDiv.innerHTML = messageContent;
+                messageDiv.appendChild(replyBox);
 
                 chatBox.appendChild(messageDiv);
+
+            });
+              document.querySelectorAll('.reply-button').forEach(button => {
+              button.addEventListener('click', (event) => {
+                  const messageId = event.target.dataset.messageId;
+                  const messageDiv = event.target.closest('.message');
+                  const replyBox = messageDiv.querySelector('.reply-box');
+                  replyBox.style.display = 'block';
+                  gsap.fromTo(replyBox, { opacity: 0, y: -20 }, { opacity: 1, y: 0, duration: 0.2 });
+              });
+            });
+            document.querySelectorAll('.send-reply-button').forEach(button => {
+              button.addEventListener('click', async (event) => {
+                  const messageId = event.target.dataset.messageId;
+                  const messageDiv = event.target.closest('.message');
+                  const replyBox = messageDiv.querySelector('.reply-box');
+                  const replyTextarea = replyBox.querySelector('textarea');
+                  const replyText = replyTextarea.value;
+                   if (!replyText) {
+                      alert('Please enter a reply message.');
+                      return;
+        }
+                  const username = usernameInput.value.trim();
+                   const newMessage = {
+                      username: username,
+                      text: replyText,
+                      replyTo: messageId, // ID pesan yang dibalas
+                      timestamp: new Date().toISOString()
+                   };
+                await fetch(`${backendURL}/messages`, {
+                      method: 'POST',
+                      headers: {
+                          'Content-Type': 'application/json'
+                      },
+                      body: JSON.stringify(newMessage)
+                });
+                  replyTextarea.value = '';
+                  replyBox.style.display = 'none';
+                  loadMessages();
+              });
             });
             chatBox.scrollTop = chatBox.scrollHeight;
         }
@@ -361,11 +462,12 @@
                 imageDataUrl = await toBase64(imageFile);
             }
 
-            const newMessage = {
-                username: username,
-                text: text,
-                image: imageDataUrl,
-                timestamp: new Date().toISOString()
+          const newMessage = {
+              id: generateId(),
+              username: username,
+              text: text,
+              image: imageDataUrl,
+              timestamp: new Date().toISOString()
             };
 
             await fetch(`${backendURL}/messages`, {
@@ -375,10 +477,15 @@
                 },
                 body: JSON.stringify(newMessage)
             });
+
             messageInput.value = '';
             imageInput.value = '';
             loadMessages();
         }
+        function generateId() {
+            return Math.random().toString(36).substring(2, 15);
+        }
+
         function toBase64(file) {
             return new Promise((resolve, reject) => {
                 const reader = new FileReader();
@@ -387,9 +494,13 @@
                 reader.onerror = error => reject(error);
             });
         }
+
         sendButton.addEventListener('click', sendMessage);
+
         loadMessages();
+
         setInterval(loadMessages, 5000);
     </script>
 </body>
+
 </html>
