--- a/admin.html
+++ b/admin.html
@@ -40,7 +40,7 @@
 
     <script>
         const clearChatButton = document.getElementById('clearChatButton');
-        const backendURL = 'http://localhost:3001';
+        const backendURL = 'https://chat-wanzofc.vercel.app';
 
         clearChatButton.addEventListener('click', async () => {
             const confirmed = confirm('Are you sure you want to clear all messages? This action cannot be undone.');
