--- a/index.html
+++ b/index.html
@@ -18,7 +18,8 @@
             flex-direction: column;
             align-items: center;
             min-height: 100vh;
-            overflow: hidden;
+            overflow-x: hidden; /* Prevent horizontal scroll */
+            overflow-y: auto; /* Enable vertical scroll for the entire page */
         }
 
         #particles-js {
@@ -33,6 +34,8 @@
             max-width: 700px;
             margin-top: 30px;
             padding: 20px;
+            display: flex;
+            flex-direction: column;
         }
 
         .header {
@@ -53,6 +56,7 @@
             overflow-y: auto;
             max-height: 400px;
             scroll-behavior: smooth;
+            flex-grow: 1; /* Chat box fills available space */
         }
 
         .message {
@@ -91,6 +95,8 @@
             border-radius: 15px;
             padding: 25px;
             box-shadow: 0 4px 20px rgba(0, 0, 0, 0.3);
+            display: flex;
+            flex-direction: column; /* Stack input elements vertically */
         }
 
         input[type="text"],
@@ -122,7 +128,6 @@
             font-size: 1em;
             transition: transform 0.2s ease, box-shadow 0.2s ease;
             box-shadow: 0 2px 10px rgba(0, 0, 0, 0.2);
-            outline: none;
         }
 
         button:hover {
@@ -219,17 +224,17 @@
     <div id="particles-js"></div>
 
     <div class="container">
-        <h1 class="header">Anonymous Chat</h1>
+        <h1 class="header">random chat</h1>
 
         <div class="chat-box" id="chatBox">
         </div>
 
-        <div class="input-box">
-            <input type="text" id="username" placeholder="Enter Nickname">
-            <input type="file" id="imageInput" accept="image/*" class="add-image">
-            <textarea id="message" placeholder="Type your message..."></textarea>
-            <button id="sendButton">Send</button>
-        </div>
+      <div class="input-box">
+          <input type="text" id="username" placeholder="enter nickname">
+          <input type="file" id="imageInput" accept="image/*" class="add-image">
+          <textarea id="message" placeholder="type your message..."></textarea>
+          <button id="sendButton">send</button>
+      </div>
     </div>
 
     <script src="https://cdnjs.cloudflare.com/ajax/libs/gsap/3.9.1/gsap.min.js"></script>
@@ -355,7 +360,7 @@
         const messageInput = document.getElementById('message');
         const imageInput = document.getElementById('imageInput');
         const sendButton = document.getElementById('sendButton');
-        const backendURL = 'https://chat-wanzofc.vercel.app';
+        const backendURL = 'chat-wanzofc.vercel.app';
 
         async function loadMessages() {
             const response = await fetch(`${backendURL}/messages`);
@@ -423,12 +428,12 @@
                    if (!replyText) {
                       alert('Please enter a reply message.');
                       return;
-        }
+              }
                   const username = usernameInput.value.trim();
                    const newMessage = {
                       username: username,
                       text: replyText,
-                      replyTo: messageId, // ID pesan yang dibalas
+                      replyTo: messageId, 
                       timestamp: new Date().toISOString()
                    };
                 await fetch(`${backendURL}/messages`, {
@@ -440,7 +445,7 @@
                 });
                   replyTextarea.value = '';
                   replyBox.style.display = 'none';
-                  loadMessages();
+                  loadMessages(); 
               });
             });
             chatBox.scrollTop = chatBox.scrollHeight;
