--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Anonymous Chat</title>
     <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Roboto:wght@400;500;700&display=swap">
-    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0/css/all.min.css" integrity="sha512-9usAa10IRO0HhonpyAIVpjrylPvoDwiPUiKdWk5t3PyolY1cOd4DSE0Ga+ri4AuTroPR5aQvXU9xC6qOPnzFeg==" crossorigin="anonymous" referrerpolicy="no-referrer" />
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0/css/all.min.css">
     <style>
         body {
             font-family: 'Roboto', sans-serif;
@@ -18,8 +18,8 @@
             flex-direction: column;
             align-items: center;
             min-height: 100vh;
-            overflow-x: hidden; /* Prevent horizontal scroll */
-            overflow-y: auto; /* Enable vertical scroll for the entire page */
+            overflow-x: hidden;
+            overflow-y: auto;
         }
 
         #particles-js {
@@ -56,7 +56,7 @@
             overflow-y: auto;
             max-height: 400px;
             scroll-behavior: smooth;
-            flex-grow: 1; /* Chat box fills available space */
+            flex-grow: 1;
         }
 
         .message {
@@ -96,7 +96,7 @@
             padding: 25px;
             box-shadow: 0 4px 20px rgba(0, 0, 0, 0.3);
             display: flex;
-            flex-direction: column; /* Stack input elements vertically */
+            flex-direction: column;
         }
 
         input[type="text"],
@@ -116,6 +116,8 @@
         input[type="text"]:focus,
         textarea:focus {
             background-color: rgba(60, 75, 95, 0.5);
+            border: 1px solid #86BBD8;
+            box-shadow: 0 0 8px #86BBD8;
         }
 
         button {
@@ -224,143 +226,144 @@
     <div id="particles-js"></div>
 
     <div class="container">
-        <h1 class="header">random chat</h1>
+        <h1 class="header">Anonymous Chat</h1>
 
         <div class="chat-box" id="chatBox">
         </div>
 
-      <div class="input-box">
-          <input type="text" id="username" placeholder="enter nickname">
-          <input type="file" id="imageInput" accept="image/*" class="add-image">
-          <textarea id="message" placeholder="type your message..."></textarea>
-          <button id="sendButton">send</button>
-      </div>
+        <div class="input-box">
+            <input type="text" id="username" placeholder="Enter Nickname">
+            <input type="file" id="imageInput" accept="image/*" class="add-image">
+            <textarea id="message" placeholder="Type your message..."></textarea>
+            <button id="sendButton">Send</button>
+        </div>
     </div>
 
     <script src="https://cdnjs.cloudflare.com/ajax/libs/gsap/3.9.1/gsap.min.js"></script>
     <script src="https://cdn.jsdelivr.net/particles.js/2.0.0/particles.min.js"></script>
     <script>
         particlesJS('particles-js', {
-                "particles": {
-                    "number": {
-                        "value": 80,
-                        "density": {
-                            "enable": true,
-                            "value_area": 800
-                        }
-                    },
-                    "color": {
-                        "value": "#86BBD8"
-                    },
-                    "shape": {
-                        "type": "circle",
-                        "stroke": {
-                            "width": 0,
-                            "color": "#000000"
-                        },
-                        "polygon": {
-                            "nb_sides": 5
-                        },
-                        "image": {
-                            "src": "img/github.svg",
-                            "width": 100,
-                            "height": 100
-                        }
-                    },
-                    "opacity": {
-                        "value": 0.5,
-                        "random": false,
-                        "anim": {
-                            "enable": false,
-                            "speed": 1,
-                            "opacity_min": 0.1,
-                            "sync": false
-                        }
-                    },
-                    "size": {
-                        "value": 5,
-                        "random": true,
-                        "anim": {
-                            "enable": false,
-                            "speed": 40,
-                            "size_min": 0.1,
-                            "sync": false
-                        }
-                    },
-                    "line_linked": {
+            "particles": {
+                "number": {
+                    "value": 80,
+                    "density": {
                         "enable": true,
-                        "distance": 150,
-                        "color": "#86BBD8",
-                        "opacity": 0.4,
-                        "width": 1
-                    },
-                    "move": {
-                        "enable": true,
-                        "speed": 6,
-                        "direction": "none",
-                        "random": false,
-                        "straight": false,
-                        "out_mode": "out",
-                        "attract": {
-                            "enable": false,
-                            "rotateX": 600,
-                            "rotateY": 1200
-                        }
+                        "value_area": 800
                     }
                 },
-                "interactivity": {
-                    "detect_on": "canvas",
-                    "events": {
-                        "onhover": {
-                            "enable": true,
-                            "mode": "grab"
-                        },
-                        "onclick": {
-                            "enable": true,
-                            "mode": "push"
-                        },
-                        "resize": true
+                "color": {
+                    "value": "#86BBD8"
+                },
+                "shape": {
+                    "type": "circle",
+                    "stroke": {
+                        "width": 0,
+                        "color": "#000000"
                     },
-                    "modes": {
-                        "grab": {
-                            "distance": 140,
-                            "line_linked": {
-                                "opacity": 1
-                            }
-                        },
-                        "bubble": {
-                            "distance": 400,
-                            "size": 40,
-                            "duration": 2,
-                            "opacity": 8,
-                            "speed": 3
-                        },
-                        "push": {
-                            "particles_nb": 4
-                        },
-                        "remove": {
-                            "particles_nb": 2
-                        }
+                    "polygon": {
+                        "nb_sides": 5
+                    },
+                    "image": {
+                        "src": "img/github.svg",
+                        "width": 100,
+                        "height": 100
                     }
                 },
-                "retina_detect": true,
-                "config_demo": {
-                    "hide_card": false,
-                    "background_color": "#b61924",
-                    "background_image": "",
-                    "source_code": {
-                        "show": true,
-                        "https": "null"
-                    },
-                    "export": false
+                "opacity": {
+                    "value": 0.5,
+                    "random": false,
+                    "anim": {
+                        "enable": false,
+                        "speed": 1,
+                        "opacity_min": 0.1,
+                        "sync": false
+                    }
+                },
+                "size": {
+                    "value": 5,
+                    "random": true,
+                    "anim": {
+                        "enable": false,
+                        "speed": 40,
+                        "size_min": 0.1,
+                        "sync": false
+                    }
+                },
+                "line_linked": {
+                    "enable": true,
+                    "distance": 150,
+                    "color": "#86BBD8",
+                    "opacity": 0.4,
+                    "width": 1
+                },
+                "move": {
+                    "enable": true,
+                    "speed": 6,
+                    "direction": "none",
+                    "random": false,
+                    "straight": false,
+                    "out_mode": "out",
+                    "attract": {
+                        "enable": false,
+                        "rotateX": 600,
+                        "rotateY": 1200
+                    }
                 }
-            });
+            },
+            "interactivity": {
+                "detect_on": "canvas",
+                "events": {
+                    "onhover": {
+                        "enable": true,
+                        "mode": "grab"
+                    },
+                    "onclick": {
+                        "enable": true,
+                        "mode": "push"
+                    },
+                    "resize": true
+                },
+                "modes": {
+                    "grab": {
+                        "distance": 140,
+                        "line_linked": {
+                            "opacity": 1
+                        }
+                    },
+                    "bubble": {
+                        "distance": 400,
+                        "size": 40,
+                        "duration": 2,
+                        "opacity": 8,
+                        "speed": 3
+                    },
+                    "push": {
+                        "particles_nb": 4
+                    },
+                    "remove": {
+                        "particles_nb": 2
+                    }
+                }
+            },
+            "retina_detect": true,
+            "config_demo": {
+                "hide_card": false,
+                "background_color": "#b61924",
+                "background_image": "",
+                "source_code": {
+                    "show": true,
+                    "https": "null"
+                },
+                "export": false
+            }
+        });
+
         const chatBox = document.getElementById('chatBox');
         const usernameInput = document.getElementById('username');
         const messageInput = document.getElementById('message');
         const imageInput = document.getElementById('imageInput');
         const sendButton = document.getElementById('sendButton');
-        const backendURL = 'chat-wanzofc.vercel.app';
+        const backendURL = 'https://chat-wanzofc.vercel.app';
 
         async function loadMessages() {
             const response = await fetch(`${backendURL}/messages`);
@@ -387,21 +390,21 @@
                 `;
 
                 if (message.replyTo) {
-                  const repliedToMessage = messages.find(m => m.id === message.replyTo);
-                  if (repliedToMessage) {
-                      messageContent = `
-                      <div class="replied-to">
-                          Replying to: ${repliedToMessage.username}: ${repliedToMessage.text}
-                      </div>
-                      ` + messageContent;
-                  }
+                    const repliedToMessage = messages.find(m => m.id === message.replyTo);
+                    if (repliedToMessage) {
+                        messageContent = `
+                        <div class="replied-to">
+                            Replying to: ${repliedToMessage.username}: ${repliedToMessage.text}
+                        </div>
+                        ` + messageContent;
+                    }
                 }
 
                 const replyBox = document.createElement('div');
                 replyBox.classList.add('reply-box');
                 replyBox.innerHTML = `
-                  <textarea placeholder="Type your reply..."></textarea>
-                  <button class="send-reply-button" data-message-id="${message.id}">Send Reply</button>
+                    <textarea placeholder="Type your reply..."></textarea>
+                    <button class="send-reply-button" data-message-id="${message.id}">Send Reply</button>
                 `;
                 messageDiv.innerHTML = messageContent;
                 messageDiv.appendChild(replyBox);
@@ -409,44 +412,53 @@
                 chatBox.appendChild(messageDiv);
 
             });
-              document.querySelectorAll('.reply-button').forEach(button => {
-              button.addEventListener('click', (event) => {
-                  const messageId = event.target.dataset.messageId;
-                  const messageDiv = event.target.closest('.message');
-                  const replyBox = messageDiv.querySelector('.reply-box');
-                  replyBox.style.display = 'block';
-                  gsap.fromTo(replyBox, { opacity: 0, y: -20 }, { opacity: 1, y: 0, duration: 0.2 });
-              });
-            });
-            document.querySelectorAll('.send-reply-button').forEach(button => {
-              button.addEventListener('click', async (event) => {
-                  const messageId = event.target.dataset.messageId;
-                  const messageDiv = event.target.closest('.message');
-                  const replyBox = messageDiv.querySelector('.reply-box');
-                  const replyTextarea = replyBox.querySelector('textarea');
-                  const replyText = replyTextarea.value;
-                   if (!replyText) {
-                      alert('Please enter a reply message.');
-                      return;
-              }
-                  const username = usernameInput.value.trim();
-                   const newMessage = {
-                      username: username,
-                      text: replyText,
-                      replyTo: messageId, 
-                      timestamp: new Date().toISOString()
-                   };
-                await fetch(`${backendURL}/messages`, {
-                      method: 'POST',
-                      headers: {
-                          'Content-Type': 'application/json'
-                      },
-                      body: JSON.stringify(newMessage)
+
+            document.querySelectorAll('.reply-button').forEach(button => {
+                button.addEventListener('click', (event) => {
+                    const messageId = event.target.dataset.messageId;
+                    const messageDiv = event.target.closest('.message');
+                    const replyBox = messageDiv.querySelector('.reply-box');
+                    replyBox.style.display = 'block';
+                    gsap.fromTo(replyBox, {
+                        opacity: 0,
+                        y: -20
+                    }, {
+                        opacity: 1,
+                        y: 0,
+                        duration: 0.2
+                    });
                 });
-                  replyTextarea.value = '';
-                  replyBox.style.display = 'none';
-                  loadMessages(); 
-              });
+            });
+
+            document.querySelectorAll('.send-reply-button').forEach(button => {
+                button.addEventListener('click', async (event) => {
+                    const messageId = event.target.dataset.messageId;
+                    const messageDiv = event.target.closest('.message');
+                    const replyBox = messageDiv.querySelector('.reply-box');
+                    const replyTextarea = replyBox.querySelector('textarea');
+                    const replyText = replyTextarea.value;
+                    if (!replyText) {
+                        alert('Please enter a reply message.');
+                        return;
+                    }
+                    const username = usernameInput.value.trim();
+                    const newMessage = {
+                        username: username,
+                        text: replyText,
+                        replyTo: messageId,
+                        timestamp: new Date().toISOString()
+                    };
+                    await fetch(`${backendURL}/messages`, {
+                        method: 'POST',
+                        headers: {
+                            'Content-Type': 'application/json'
+                        },
+                        body: JSON.stringify(newMessage)
+                    });
+                    replyTextarea.value = '';
+                    replyBox.style.display = 'none';
+                    loadMessages();
+                });
             });
             chatBox.scrollTop = chatBox.scrollHeight;
         }
@@ -467,12 +479,12 @@
                 imageDataUrl = await toBase64(imageFile);
             }
 
-          const newMessage = {
-              id: generateId(),
-              username: username,
-              text: text,
-              image: imageDataUrl,
-              timestamp: new Date().toISOString()
+            const newMessage = {
+                id: generateId(),
+                username: username,
+                text: text,
+                image: imageDataUrl,
+                timestamp: new Date().toISOString()
             };
 
             await fetch(`${backendURL}/messages`, {
@@ -487,6 +499,7 @@
             imageInput.value = '';
             loadMessages();
         }
+
         function generateId() {
             return Math.random().toString(36).substring(2, 15);
         }
