--- a/index.html
+++ b/index.html
@@ -1,10 +1,9 @@
 <!DOCTYPE html>
-<html lang="en">
-
+<html lang="id">
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Anonymous Chat</title>
+    <title>random chat</title>
     <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Roboto:wght@400;500;700&display=swap">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0/css/all.min.css">
     <style>
@@ -221,16 +220,12 @@
         }
     </style>
 </head>
-
 <body>
     <div id="particles-js"></div>
-
     <div class="container">
-        <h1 class="header">Anonymous Chat</h1>
-
+        <h1 class="header">random chat</h1>
         <div class="chat-box" id="chatBox">
         </div>
-
         <div class="input-box">
             <input type="text" id="username" placeholder="Enter Nickname">
             <input type="file" id="imageInput" accept="image/*" class="add-image">
@@ -238,7 +233,6 @@
             <button id="sendButton">Send</button>
         </div>
     </div>
-
     <script src="https://cdnjs.cloudflare.com/ajax/libs/gsap/3.9.1/gsap.min.js"></script>
     <script src="https://cdn.jsdelivr.net/particles.js/2.0.0/particles.min.js"></script>
     <script>
@@ -283,10 +277,10 @@
                     "value": 5,
                     "random": true,
                     "anim": {
-                        "enable": false,
+                        "enable": true,
                         "speed": 40,
                         "size_min": 0.1,
-                        "sync": false
+                        "sync": true
                     }
                 },
                 "line_linked": {
