--- a/admin.html
+++ b/admin.html
@@ -77,10 +77,11 @@
                     <th>Email</th>
                     <th>Permintaan</th>
                     <th>Waktu</th>
-                    <th>Aksi</th>
+                    <th>Aksi</th> <!-- Kolom untuk tombol "Selesai" -->
                 </tr>
             </thead>
             <tbody>
+                <!-- Data permintaan akan ditampilkan di sini -->
             </tbody>
         </table>
 
